# plain-language-notices

./: .gitignore  PORTFOLIO.md  README.md  SETUP.md  SPEC.md  WEBSITE_BLURB.md  pyproject.toml
app/: app.py
data/: generate_pairs.py  holdout.jsonl  pairs.jsonl
eval/: report.md  run_eval.py
src/: __init__.py  baselines.py  config.py  faithfulness.py  readability.py  rewrite.py  schema.py
tests/: test_faithfulness.py
train/: config.yaml  finetune_lora.ipynb
