[project]
name = "plain-language-notices"
version = "0.1.0"
description = "A fine-tuned model that rewrites benefit notices into plain language while provably preserving the legally operative facts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Generation baselines and the LLM-judged comparison (needs ANTHROPIC_API_KEY).
llm = ["anthropic>=0.40"]
app = ["streamlit>=1.40"]
dev = ["pytest>=8.0"]
# Note: the LoRA/QLoRA fine-tune runs on a free Colab/Kaggle GPU via
# train/finetune_lora.ipynb, which installs unsloth/peft/trl/torch in its own
# environment. Those heavy, GPU-only deps are deliberately NOT listed here so the
# repo installs and its data/eval logic runs on a laptop with no GPU.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
